fix bug with header blur on safari

--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2025;
+    z-index: 10001;
     height: var(--header-height);
     min-height: 60px;
     width: 100%;
@@ -75,7 +75,7 @@ header {
     background-color: var(--navbar-background-color);
     width: 100%;
     height: 100%;
-    z-index: 2024;
+    z-index: 10000;
     overflow: hidden;
     left: -100%;
 
